--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Välkommen till Företag X</h1>
+        <h1>Välkommen till ...</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Hem</a></li>
