changed layout from flex to grid and added three sections to the home page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             <p>Vi erbjuder de bästa produkterna för dig.</p>
             <button onclick="alert('Tack för att du prenumererar!')">Prenumerera nu</button>
         </section>
+
+        <section>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, magni?</p>
+        </section>
+
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, commodi!</p>
+        </section>
+
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, modi.</p>
+        </section>
     </main>
 
     <footer>
