product page changed

--- a/products.html
+++ b/products.html
@@ -21,21 +21,26 @@
 
     <main>
         <section class="product-grid">
-            <div class="product">
-                <img src="product1.jpg" alt="Produkt 1">
-                <h2>Produkt 1</h2>
-                <p>Beskrivning av produkt 1.</p>
-            </div>
-            <div class="product">
-                <img src="product2.jpg" alt="Produkt 2">
-                <h2>Produkt 2</h2>
-                <p>Beskrivning av produkt 2.</p>
-            </div>
-            <div class="product">
-                <img src="product3.jpg" alt="Produkt 3">
-                <h2>Produkt 3</h2>
-                <p>Beskrivning av produkt 3.</p>
-            </div>
+            <h2>Beställ direkt i vår webbutik!</h2>
+            <ul>
+                <li class="product">
+                <img src="/images/bread1.jpg" alt="Havrebröd">
+                <h3>Havrebröd</h3>
+                <p>Havrebrödet ligger i tiden - ett smakrikt och saftigt bröd stenugnsbakat på skållade havreflingor och rågsurdeg. Lika gott till frukost som lunch och middag.</p>
+                </li>
+
+                <li class="product">               
+                <img src="/images/bread2.jpg" alt="Kanelbulle">
+                <h3>Kanelbulle</h3>
+                <p>En vetebulle med en riklig kanelsmak.</p>
+                </li> 
+
+                <li class="product"> 
+                <img src="/images/bread3.jpg" alt="Petit valnöt">
+                <h3>Petit valnöt</h3>
+                <p>Vårt valnötsbröd bakas på rågsurdeg, oblandat rågmjöl och rikligt med valnötter. Brödet bakas direkt på stenhällen i hög värme vilket ger det dess speciella karaktär. Brödet är fantastiskt gott att rosta i tunna skivor och passar utmärkt till ost och vin.</p>
+                </li>
+                </ul>
         </section>
     </main>
 
