--- a/products.html
+++ b/products.html
@@ -20,27 +20,37 @@
     </header>
 
     <main>
-        <section class="product-grid">
-            <h2>Beställ direkt i vår webbutik!</h2>
-            <ul>
-                <li class="product">
-                <img src="/images/bread1.jpg" alt="Havrebröd">
-                <h3>Havrebröd</h3>
-                <p>Havrebrödet ligger i tiden - ett smakrikt och saftigt bröd stenugnsbakat på skållade havreflingor och rågsurdeg. Lika gott till frukost som lunch och middag.</p>
-                </li>
+        <section class="product-section">
+            <h2 class="product-section-title">Beställ direkt i vår webbutik!</h2>
+            <div class="cards">
+                <div class="product-item">
+                <div class="product-image-container">
+                 <a href="#" class="card-image-link">         <img src="/images/bread1.jpg" alt="Havrebröd"/> 
+                 </a>
+                </div>
+                <h3 class="product-title">Havrebröd</h3>
+                <p class="product-description">Havrebrödet ligger i tiden - ett smakrikt och saftigt bröd stenugnsbakat på skållade havreflingor och rågsurdeg.</p>
 
-                <li class="product">               
-                <img src="/images/bread2.jpg" alt="Kanelbulle">
-                <h3>Kanelbulle</h3>
-                <p>En vetebulle med en riklig kanelsmak.</p>
-                </li> 
+                <button class="buy-button">Köp</button>
+                </div>
 
-                <li class="product"> 
-                <img src="/images/bread3.jpg" alt="Petit valnöt">
-                <h3>Petit valnöt</h3>
-                <p>Vårt valnötsbröd bakas på rågsurdeg, oblandat rågmjöl och rikligt med valnötter. Brödet bakas direkt på stenhällen i hög värme vilket ger det dess speciella karaktär. Brödet är fantastiskt gott att rosta i tunna skivor och passar utmärkt till ost och vin.</p>
-                </li>
-                </ul>
+                <div class="product-item">
+                <div class="product-image-container">
+                <img class="product-image" src="/images/bread2.jpg" alt="Kanelbulle">
+                </div>          
+                <h3 class="product-title">Kanelbulle</h3>
+                <p class="product-description">En vetebulle med en riklig kanelsmak.</p>
+                <button class="buy-button">Köp</button>
+                </div> 
+
+                <div class="product-item"><div class="product-image-container">   
+                <img class="product-image" src="/images/bread3.jpg" alt="Petit valnöt">
+                </div> 
+                <h3 class="product-title">Petit valnöt</h3>
+                <p class="product-description">Vårt valnötsbröd bakas på rågsurdeg, oblandat rågmjöl och rikligt med valnötter.</p>
+                <button class="buy-button">Köp</button>
+                </div>
+                </div>
         </section>
     </main>
 
