cover image on the main page fixed, header edited

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Välkommen till Bageriet</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="products.html">Produkter</a></li>
-                <li><a href="contact.html">Kontakta oss</a></li>
-            </ul>
+    <header class="header">
+        <nav class="header-menu">
+          <ul class="header-links-list">
+            <li class="header-links-list-item">
+              <a class="header-link" href="index.html">Hem</a>
+            </li>
+            <li class="header-links-list-item">
+              <a class="header-link" href="products.html">Produkter</a>
+            </li>
+            <li class="header-links-list-item">
+              <a class="header-link" href="contact.html">Kontakta oss</a>
+            </li>
+          </ul>
         </nav>
-    </header>
+      </header>
 
     <main>
-        <section class="hero">
-            <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/16/97/a8/22/hart-bageri.jpg?w=1400&h=-1&s=1" alt="Bild av Företag X" />
+        <section class="cover">
+            <img class="cover-image" src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/16/97/a8/22/hart-bageri.jpg?w=1400&h=-1&s=1" alt="Bild av Bageriet" />
+            <h1 class="cover-title">Välkommen till Bageriet</h1>
             <p id="text1">Vi erbjuder de bästa produkterna för dig!</p>
-            <button onclick="alert('Tack för att du prenumererar!')">Prenumerera nu</button>
         </section>
         
         <article>
