linked the images

--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
             <div class="cards">
                 <div class="product-item">
                 <div class="product-image-container">
-                 <a href="#" class="card-image-link">         <img src="/images/bread1.jpg" alt="Havrebröd"/> 
+                 <a href="#" class="card-image-link">         <img src="https://github.com/visska-me/boiler-room-w38-team-malmo1/blob/main/images/bread1.jpg?raw=true" alt="Havrebröd"/> 
                  </a>
                 </div>
                 <h2 class="product-title">Havrebröd</h2>
@@ -35,7 +35,7 @@
 
                 <div class="product-item">
                 <div class="product-image-container">
-                <img class="product-image" src="/images/bread2.jpg" alt="Kanelbulle">
+                <img class="product-image" src="https://github.com/visska-me/boiler-room-w38-team-malmo1/blob/main/images/bread2.jpg?raw=true" alt="Kanelbulle">
                 </div>          
                 <h2 class="product-title">Kanelbulle</h2>
                 <p class="product-description">En vetebulle med en riklig kanelsmak.</p>
@@ -43,7 +43,7 @@
                 </div> 
 
                 <div class="product-item"><div class="product-image-container">   
-                <img class="product-image" src="/images/bread3.jpg" alt="Petit valnöt">
+                <img class="product-image" src="https://github.com/visska-me/boiler-room-w38-team-malmo1/blob/main/images/bread3.jpg?raw=true" alt="Petit valnöt">
                 </div> 
                 <h2 class="product-title">Petit valnöt</h2>
                 <p class="product-description">Vårt valnötsbröd bakas på rågsurdeg, oblandat rågmjöl och rikligt med valnötter.</p>
