Gjorde footern till ett id för att kunna särskilja textfärgerna på sidan och därmed gjorde kontrasten felfri genom sidan.

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="site-footer">
         <p>&copy; 2024 Företag X. Alla rättigheter förbehållna.</p>
     </footer>
 </body>
