--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="site-footer">
         <p>&copy; 2024 Företag X. Alla rättigheter förbehållna.</p>
     </footer>
 </body>
