I added link tags for all products on the product page

--- a/products.html
+++ b/products.html
@@ -24,7 +24,8 @@
             <div class="cards">
                 <div class="product-item">
                 <div class="product-image-container">
-                 <a href="#" class="card-image-link">         <img src="/images/bread1.jpg" alt="Havrebröd"/> 
+                 <a href="#" class="card-image-link">
+                 <img class="product-image" src="/images/bread1.jpg" alt="Havrebröd"/> 
                  </a>
                 </div>
                 <h2 class="product-title">Havrebröd</h2>
@@ -35,15 +36,20 @@
 
                 <div class="product-item">
                 <div class="product-image-container">
+                <a href="#" class="card-image-link">
                 <img class="product-image" src="/images/bread2.jpg" alt="Kanelbulle">
+                </a>    
                 </div>          
                 <h2 class="product-title">Kanelbulle</h2>
                 <p class="product-description">En vetebulle med en riklig kanelsmak.</p>
                 <button class="buy-button">Köp</button>
                 </div> 
 
-                <div class="product-item"><div class="product-image-container">   
+                <div class="product-item">
+                <div class="product-image-container">
+                <a href="#" class="card-image-link">  
                 <img class="product-image" src="/images/bread3.jpg" alt="Petit valnöt">
+                </a>     
                 </div> 
                 <h2 class="product-title">Petit valnöt</h2>
                 <p class="product-description">Vårt valnötsbröd bakas på rågsurdeg, oblandat rågmjöl och rikligt med valnötter.</p>
