--- a/products.html
+++ b/products.html
@@ -3,64 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Företag X produkter. Kvalitetsprodukter för alla.">
-    <title>Företag X - Produkter</title>
+    <meta name="description" content="Bageriet produkter. Kvalitetsprodukter för alla.">
+    <title>Bageriet - Produkter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav role="navigation" aria-label="Huvudmeny">
             <ul>
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="products.html">Produkter</a></li>
+                <li><a href="products.html" aria-current="page">Produkter</a></li>
                 <li><a href="contact.html">Kontakta oss</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main role="main">
         <section class="product-section">
             <h1 class="product-section-title">Beställ direkt i vår webbutik!</h1>
+
             <div class="cards">
                 <div class="product-item">
                 <div class="product-image-container">
-                 <a href="#" class="card-image-link">
-                 <img class="product-image" src="/images/bread1.jpg" alt="Havrebröd"/> 
+                 <a href="#" class="card-image-link" aria-label="Visa detaljer om Havrebröd">
+                 <img class="product-image" src="/images/bread1.jpg" alt="Havrebröd - stenugnsbakat på skållade havreflingor och rågsurdeg"/> 
                  </a>
                 </div>
                 <h2 class="product-title">Havrebröd</h2>
                 <p class="product-description">Havrebrödet ligger i tiden - ett smakrikt och saftigt bröd stenugnsbakat på skållade havreflingor och rågsurdeg.</p>
-
-                <button class="buy-button">Köp</button>
+                <button class="buy-button" aria-label="Köp Havrebröd">Köp</button>
                 </div>
 
                 <div class="product-item">
                 <div class="product-image-container">
-                <a href="#" class="card-image-link">
-                <img class="product-image" src="/images/bread2.jpg" alt="Kanelbulle">
+                <a href="#" class="card-image-link" aria-label="Visa detaljer om Kanelbulle">
+                <img class="product-image" src="/images/bread2.jpg" alt="Kanelbulle - vetebulle med riklig kanelsmak">
                 </a>    
                 </div>          
                 <h2 class="product-title">Kanelbulle</h2>
                 <p class="product-description">En vetebulle med en riklig kanelsmak.</p>
-                <button class="buy-button">Köp</button>
+                <button class="buy-button" aria-label="Köp Kanelbulle">Köp</button>
                 </div> 
 
                 <div class="product-item">
                 <div class="product-image-container">
-                <a href="#" class="card-image-link">  
-                <img class="product-image" src="/images/bread3.jpg" alt="Petit valnöt">
+                <a href="#" class="card-image-link" aria-label="Visa detaljer om Petit valnöt">  
+                <img class="product-image" src="/images/bread3.jpg" alt="Petit valnöt - rågsurdeg med valnötter">
                 </a>     
                 </div> 
                 <h2 class="product-title">Petit valnöt</h2>
                 <p class="product-description">Vårt valnötsbröd bakas på rågsurdeg, oblandat rågmjöl och rikligt med valnötter.</p>
-                <button class="buy-button">Köp</button>
+                <button class="buy-button" aria-label="Köp Petit valnöt">Köp</button>
                 </div>
                 </div>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Företag X. Alla rättigheter förbehållna.</p>
+    <footer role="contentinfo"
+        <p>&copy;Bageriet 2024 . Alla rättigheter förbehållna.</p>
     </footer>
 </body>
 </html>
