--- a/products.html
+++ b/products.html
@@ -59,8 +59,9 @@
         </section>
     </main>
 
-    <footer role="contentinfo"
+    
+    <footer class="site-footer" role="contentinfo">
     <p>&copy; 2024 Bageriet. Alla rättigheter förbehållna.</p>
-</footer>
+    </footer>
 </body>
 </html>
